--- a/src/components/Footer/TinyFooter/TinyFooter.astro
+++ b/src/components/Footer/TinyFooter/TinyFooter.astro
@@ -23,6 +23,10 @@ const { title, parent_site_title, parent_site_url } = Astro.props;
                     alt="yellow pages logo"
                     width={512}
                     height={512}
+                    widths={[60, 80, 100, 200]}
+                    sizes={`(max-width: 768px) 60px, 80px, 100px, 200px`}
+                    loading="lazy"
+                    decoding="async"
                 />
                 <a
                     href={parent_site_url}
