--- a/src/components/PageNavigation/BlockyNav/BlockyNav.astro
+++ b/src/components/PageNavigation/BlockyNav/BlockyNav.astro
@@ -66,7 +66,7 @@ const pageLinks = links.map((link) =>
                 }
             </menu>
             <div class="blocky-nav__actions">
-                <button
+                <button type="button"
                     id="sticky_nav__toggle"
                     class="sticky_nav__toggle btn btn-primary btn-icon"
                     data-menu-toggle
