--- a/src/components/PageNavigation/StickyNav/StickyNav.astro
+++ b/src/components/PageNavigation/StickyNav/StickyNav.astro
@@ -1,9 +1,7 @@
 ---
 import Container from "@components/Container.astro";
 import { Icon } from "astro-icon/components";
-import { getImageUrl } from "@utils/pocketbase";
 import "./nav.css";
-import { inferRemoteSize, Picture } from "astro:assets";
 import CustomImage from "@components/CustomImage.astro";
 interface Props {
     fixedMenu: boolean;
@@ -65,7 +63,7 @@ const pageLinks = links.map(link =>
                 }
             </menu>
             <div class="sticky-nav__actions">
-                <button
+                <button type="button"
                     id="sticky_nav__toggle"
                     class="sticky_nav__toggle btn btn-primary btn-icon"
                     data-menu-toggle
@@ -94,48 +92,5 @@ const pageLinks = links.map(link =>
 </nav>
 
 <script>
-    const toggleActive = (el: HTMLElement) => {
-        el.dataset.isActive = String(!(el.dataset.isActive === "true"));
-    };
-
-    const toggleScroll = (el: HTMLElement) => {
-        if (window.scrollY > el.getBoundingClientRect().height * 0.5) {
-            el.dataset.isActive = "true";
-        } else {
-            el.dataset.isActive = "false";
-        }
-    };
-
-    document.addEventListener("DOMContentLoaded", (event) => {
-        const nav = document.querySelector("[data-nav-bar]") as HTMLElement;
-        const toggle = document.querySelector(
-            "[data-menu-toggle]",
-        ) as HTMLButtonElement;
-        const toggleIcons = document.querySelectorAll(
-            "[data-icon]",
-        ) as NodeListOf<HTMLElement>;
-        const menu = document.querySelector("[data-menu]") as HTMLElement;
-
-        // Click Listener
-        toggle.addEventListener("click", function () {
-            toggleActive(menu); // Toggle Menu
-            this.ariaExpanded = String(!(this.ariaExpanded === "true")); // Toggle Aria
-            toggleActive(this); // Toggle Active
-
-            for (const icon of toggleIcons) {
-                toggleActive(icon); // Toggle Icons
-            }
-        });
-
-        toggleScroll(nav);
-
-        // Scroll Listener
-        document.addEventListener("scroll", () => {
-            if (window.scrollY > nav.getBoundingClientRect().height * 0.5) {
-                toggleScroll(nav);
-            } else {
-                toggleScroll(nav);
-            }
-        });
-    });
+    import "@utils/navigationEvents";
 </script>
