--- a/src/components/Sections/Contact Sections/TwoColumnContact/TwoColumnContact.astro
+++ b/src/components/Sections/Contact Sections/TwoColumnContact/TwoColumnContact.astro
@@ -4,9 +4,7 @@ import Container from "@components/Container.astro";
 import "./contact.css";
 import TopRightAnimatedSvg from "@components/TopRightAnimatedSvg.astro";
 
-const { title, info, location } = Astro.props;
-// const loc = ""
-// location.length <= 1 && location.map((loc: any) => loc=loc)
+const {info, location } = Astro.props;
 ---
 
 <div class="two_column_contact container" id="contact-us" data-highlight="true">
