--- a/src/components/PageNavigation/PageNavigation.astro
+++ b/src/components/PageNavigation/PageNavigation.astro
@@ -9,8 +9,8 @@ interface Props {
     hero_style: string;
 }
 
-import BasicFLoatingNav from "@components/PageNavigation/Navigation/FixedNav/FixedNav.astro";
-import FloatingPill from "@components/PageNavigation/FloatingPill/FloatingPill.astro";
+// import BasicFLoatingNav from "@components/PageNavigation/Navigation/FixedNav/FixedNav.astro";
+// import FloatingPill from "@components/PageNavigation/FloatingPill/FloatingPill.astro";
 import StickyNav from "@components/PageNavigation/StickyNav/StickyNav.astro";
 import BlockyNav from "./BlockyNav/BlockyNav.astro";
 const props = Astro.props;
