--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,11 +33,11 @@ const record = await getData();
 <html lang={languages[record.country]}>
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<meta name="color-scheme" content="light" />
 		<meta name="theme-color" content={record.theme_color} />
 		<meta name="robots" content="index, follow" />
-		<slot set:html={record.analytics_id} />
+		<slot name="analytics" set:html={record.analytics_id} />
 		<slot set:html={record.search_console} />
 
 		<link rel="sitemap" href="/sitemap.xml" />
@@ -163,12 +163,12 @@ const record = await getData();
 </html>
 <style define:vars={{ themeColor: record.theme_color, spring: spring(0.5, 0.8)}} is:global></style>
 <script>
-    import { animate, scroll, stagger } from "motion";
-    const animateOnScrollItems = document.querySelectorAll("[data-animate-on-scroll]");
-    animateOnScrollItems.forEach((item) => {
-        scroll(animate(item, { opacity: [0, 1, 1, 0] }, {ease: "linear", duration: 0.75, delay: stagger(0.5)}), {
-            target: item,
-            offset: ["start end", "end end", "start start", "end start"],
-        })
-    })
+    // import { animate, scroll, stagger } from "motion";
+    // const animateOnScrollItems = document.querySelectorAll("[data-animate-on-scroll]");
+    // animateOnScrollItems.forEach((item) => {
+    //     scroll(animate(item, { opacity: [0, 1, 1, 0] }, {ease: "linear", duration: 0.75, delay: stagger(0.5)}), {
+    //         target: item,
+    //         offset: ["start end", "end end", "start start", "end start"],
+    //     })
+    // })
 </script>
