--- a/src/components/Cards/Alternating/alternating.css
+++ b/src/components/Cards/Alternating/alternating.css
@@ -12,15 +12,24 @@
 
     padding: var(--size-4);
 
-    color: var(--clr-primary-dark-text);
-    background-color: var(--clr-primary-dark);
+    width: 100%;
 }
 
 .alternating-card ul {
-    list-style: none;
+    /* list-style: none; */
     padding: 0;
-    margin: var(--size-2) 0;
+    margin: var(--size-2) var(--size-4);
 
+}
+
+.alternating-card:nth-child(even) {
+    color: var(--clr-neutral-900);
+    background-color: var(--clr-neutral-200);
+}
+.alternating-card:nth-child(odd) {
+    color: var(--clr-neutral-900);
+    background-color: var(--clr-neutral-50);
+    border: 1px solid var(--clr-neutral-200);
 }
 
 /* [data-highlight="true"] .alternating-card:nth-child(even) {
@@ -50,7 +59,7 @@
     background-color: hsl(var(--clr-secondary-hsl) / 0.15);
 }
 
-.alternating-card-grid__image_component {
+.alternating-card__image {
     width: 100%;
     height: 100%;
 }
