--- a/src/components/Cards/Basic/basic.css
+++ b/src/components/Cards/Basic/basic.css
@@ -33,14 +33,6 @@
     overflow: hidden;
 }
 
-.basic_card article picture {
-    width: 100%;
-    height: 100%;
-    /* aspect-ratio: 16/9; */
-    display: block;
-    overflow: hidden;
-}
-
 .basic_card__image_component {
     width: 100%;
     height: 100%;
@@ -48,7 +40,7 @@
     display: block;
 }
 
-.basic_card article>div {
+.basic_card__content {
     flex: 1;
     padding: var(--size-4);
     width: 100%;
