--- a/src/components/Hero/BlockyHero/BlockyHero.astro
+++ b/src/components/Hero/BlockyHero/BlockyHero.astro
@@ -1,9 +1,11 @@
 ---
-import './hero.css';
+import ColourfulCard from "@components/Cards/ColourfulCard/ColourfulCard.astro";
+import "./hero.css";
 import Container from "@components/Container.astro";
 import CustomImage from "@components/CustomImage.astro";
-const { title, excerpt, image } = Astro.props;
+const { title, excerpt, image, grid } = Astro.props;
 ---
+
 <header class="blocky-hero">
     <Container>
         <div class="blocky-hero__wrapper">
@@ -12,7 +14,14 @@ const { title, excerpt, image } = Astro.props;
                 <p>{excerpt}</p>
             </div>
             <div class="blocky-hero__image">
-                <CustomImage image={image} classlist="blocky-hero__image-image" size="large" eager={false} />
+                <CustomImage
+                    image={image}
+                    classlist="blocky-hero__image-image"
+                    size="large"
+                    eager={false}
+                />
             </div>
         </div>
+        {grid && <ColourfulCard cards={grid} />}
+    </Container>
 </header>
