--- a/src/components/Hero/PageHero.astro
+++ b/src/components/Hero/PageHero.astro
@@ -8,9 +8,9 @@ import VerticalWithImage from "./VerticalWithImage/VerticalWithImage.astro";
 import TwoSquares from "./TwoSquares/TwoSquares.astro";
 import BlockyHero from "./BlockyHero/BlockyHero.astro";
 
-const { title, excerpt, image, type } = Astro.props;
+const { title, excerpt, image, type, grid } = Astro.props;
 ---
-{type === "blocky" && <BlockyHero title={title} excerpt={excerpt} image={image} />}
+{type === "blocky" && <BlockyHero title={title} excerpt={excerpt} image={image} grid={grid}/>}
 {type === "gradient" && (<Gradient title={title} excerpt={excerpt} image={image} />)}
 {type === "black modern" && <BlackModern title={title} excerpt={excerpt} image={image} />}
 {type === "horizontal with image" && <HorizontalWithImage title={title} excerpt={excerpt} image={image} />}
