Refactor BlockyNav and StickyNav components for improved accessibility and styling

--- a/src/components/PageNavigation/BlockyNav/BlockyNav.astro
+++ b/src/components/PageNavigation/BlockyNav/BlockyNav.astro
@@ -36,7 +36,7 @@ const pageLinks = links.map((link) =>
 >
     <Container>
         <div class="blocky-nav__wrapper">
-            <a class="blocky-nav__logo">
+            <a class="blocky-nav__logo" href="/">
                 <CustomImage
                     eager={true}
                     image={logo}
@@ -66,7 +66,8 @@ const pageLinks = links.map((link) =>
                 }
             </menu>
             <div class="blocky-nav__actions">
-                <button type="button"
+                <button
+                    type="button"
                     id="sticky_nav__toggle"
                     class="sticky_nav__toggle btn btn-primary btn-icon"
                     data-menu-toggle
@@ -95,5 +96,52 @@ const pageLinks = links.map((link) =>
 </nav>
 
 <script>
-    import "@src/utils/navigationEvents";
+    const toggleActive = (el: HTMLElement) => {
+        el.dataset.isActive = String(!(el.dataset.isActive === "true"));
+    };
+
+    const toggleScroll = (el: HTMLElement) => {
+        if (window.scrollY > el.getBoundingClientRect().height * 0.5) {
+            el.dataset.isActive = "true";
+        } else {
+            el.dataset.isActive = "false";
+        }
+    };
+
+    const toggleAria = (el: HTMLElement) => {
+        el.ariaExpanded = String(!(el.ariaExpanded === "true"));
+    };
+
+    document.addEventListener("DOMContentLoaded", () => {
+        const nav = document.querySelector("[data-nav-bar]") as HTMLElement;
+        const toggle = document.querySelector(
+            "[data-menu-toggle]",
+        ) as HTMLButtonElement;
+        const toggleIcons = document.querySelectorAll(
+            "[data-icon]",
+        ) as NodeListOf<HTMLElement>;
+        const menu = document.querySelector("[data-menu]") as HTMLElement;
+
+        // Click Listener
+        toggle.addEventListener("click", function () {
+            toggleActive(menu); // Toggle Menu
+            toggleAria(this); // Toggle Aria
+            toggleActive(this); // Toggle Active
+
+            for (const icon of toggleIcons) {
+                toggleActive(icon); // Toggle Icons
+            }
+        });
+
+        toggleScroll(nav);
+
+        // Scroll Listener
+        document.addEventListener("scroll", () => {
+            if (window.scrollY > nav.getBoundingClientRect().height * 0.5) {
+                toggleScroll(nav);
+            } else {
+                toggleScroll(nav);
+            }
+        });
+    });
 </script>
