--- a/src/components/PageNavigation/BlockyNav/nav.css
+++ b/src/components/PageNavigation/BlockyNav/nav.css
@@ -55,6 +55,8 @@
     justify-content: center;
     gap: var(--size-1);
     width: fit-content;
+    text-decoration: none;
+    color: var(--clr-primary-darker);
     /* border-right-color: var(--clr-primary); */
 }
 
