--- a/src/components/PageNavigation/StickyNav/nav.css
+++ b/src/components/PageNavigation/StickyNav/nav.css
@@ -38,7 +38,7 @@
 
 .sticky-nav__logo-image {
     width: auto;
-    max-height: 60px;
+    max-height: 40px;
 }
 
 .sticky-nav__logo {
@@ -88,7 +88,7 @@
     font-weight: var(--heading-large-weight);
     overflow: hidden;
 
-    padding: var(--size-1) var(--size-3);
+    padding: var(--size-3) var(--size-3);
 }
 
 .sticky-nav__link--cta {
@@ -130,7 +130,7 @@
 .sticky-nav__menu {
     grid-column: 1 / -1;
     display: grid;
-    grid-auto-rows: 52px;
+    grid-auto-rows: auto;
     list-style: none;
 }
 
@@ -146,6 +146,17 @@
 
 .sticky-nav__menu[data-is-active="false"] {
     display: none;
+}
+
+.sticky-nav__logo {
+    font-size: var(--body-medium);
+    font-weight: var(--body-medium-weight);
+    text-decoration: none;
+    color: currentColor;
+}
+
+.sticky-nav[data-black-text="true"] .sticky-nav__logo {
+    color: var(--clr-primary-darker);
 }
 
 @media (min-width: 768px) {
@@ -171,6 +182,12 @@
         padding: var(--size-0);
     }
 
+    .sticky-nav[data-is-active="false"][data-black-text="true"] .sticky-nav__menu {
+        padding: var(--size-2);
+        color: var(--clr-primary-dark-text);
+        background-color: var(--clr-primary-dark);
+    }
+
     .sticky-nav__actions,
     .sticky-nav__logo {
         display: flex;
@@ -182,7 +199,7 @@
     }
 
     .sticky-nav__logo-image {
-        max-height: 60px;
+        max-height: 40px;
         width: auto;
     }
 
@@ -211,11 +228,17 @@
 
         justify-self: end;
         width: fit-content;
+        height: 100%;
+
     }
 
     .sticky-nav__link,
     .sticky-nav__logo {
         cursor: pointer;
+    }
+
+    .sticky-nav__link {
+        padding: var(--size-1) var(--size-3);
     }
 
     /* .sticky-nav[data-is-active="true"] .sticky-nav__link:hover,
