--- a/src/components/Sections/Section/Section.astro
+++ b/src/components/Sections/Section/Section.astro
@@ -6,24 +6,43 @@ import Cards from "@components/Cards/Cards.astro";
 const { data } = Astro.props;
 ---
 
-<div class="content_section" data-highlight={data.highlight} id={data.type.split(" ").join("-")}>
+<div
+    class="content_section"
+    data-highlight={data.highlight}
+    id={data.type.split(" ").join("-")}
+>
     <Container>
-        {data.type !== "stats" && (
-            <header class="content_section__header">
-                <h2>{data.title}</h2>
-            </header>
-            <div class="content_section__wrapper">
-                <div class="content_section__content">
-                    <slot set:html={data.content} />
-                </div>
+        {
+            data.type !== "stats" && (
+                <header class="content_section__header">
+                    <h2>{data.title}</h2>
+                </header>
+                <div class="content_section__wrapper">
+                    <div class="content_section__content">
+                        <slot set:html={data.content} />
+                    </div>
 
-                {data.expand.image && (data.expand.image.map((image: any)=>(
-                    <CustomImage image={image} classlist="content_section__image" size="medium" eager={false}/>
-                )))}
-            </div>
-        )}
-        {data.expand.section_grid && (
-            <Cards card_type={data.grid_type} cards={data.expand.section_grid} data={data} />
-        )}
+                {data.expand.image &&
+                    <div class="content_section__image-wrapper" data-fancy-wrapper={data.expand.image.length > 1}>
+                                 <CustomImage
+                                    image={data.expand.image[0]}
+                                    classlist="content_section__image"
+                                    size="large"
+                                    eager={false}
+                                />
+                    </div>
+                    }
+                </div>
+            )
+        }
+        {
+            data.expand.section_grid && (
+                <Cards
+                    card_type={data.grid_type}
+                    cards={data.expand.section_grid}
+                    data={data}
+                />
+            )
+        }
     </Container>
 </div>
