--- a/src/components/Sections/Section/section.css
+++ b/src/components/Sections/Section/section.css
@@ -31,15 +31,36 @@
     object-fit: contain;
     object-position: center;
 
-    border-radius: var(--size-4);
     overflow: hidden;
 }
 
+.content_section__content ul {
+    margin-left: var(--size-4);
+}
+
 /* Tablet and up */
-@media (min-width: 768px) {
-    .content_section__wrapper {
+@media (min-width: 800px) {
+    .content_section__wrapper,
+    .content_section__header {
+        display: grid;
         grid-template-columns: repeat(2, 1fr);
         align-items: center;
         gap: var(--size-8);
+    }
+    
+    .content_section__content ul {
+        margin-left: var(--size-4);
+    }
+    /* .content_section__image-wrapper[data-fancy-wrapper="true"] {
+        --size: 200px;
+
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(var(--size), 1fr));
+        grid-auto-rows: var(--size);
+        gap: var(--size-1);
+    } */
+
+    .content_section__image-wrapper > :last-child {
+        grid-column: 1 / -1;
     }
 }
