--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -41,7 +41,7 @@
     --container-padding-block: var(--size-8);
     --container-padding-inline: var(--size-3);
 
-    --snappy-bounce-ease: cubic-bezier(.6, -0.38, .37, 1.36);
+    --snappy-bounce-ease: cubic-bezier(0.6, -0.38, 0.37, 1.36);
 
     /* Primary Color */
     --clr-primary-hsl: 0 73% 32%;
@@ -60,10 +60,10 @@
     --clr-primary-darker: oklch(from var(--clr-primary) 35% c h);
     --clr-primary-darker-text: oklch(from var(--clr-primary-darker) calc(l + .60) c h);
 
-    
+
     /* Secondary Color - Complementary Contrast (Olive Green) */
     --clr-secondary-hsl: 60 50% 40%;
-    --clr-secondary: oklch(from var(--themeColor) l c calc(h - 45));
+    --clr-secondary: oklch(from var(--themeColor) l c calc(h - 180));
     --clr-secondary-lighter: oklch(from var(--clr-secondary) 75% c h);
     --clr-secondary-light: oklch(from var(--clr-secondary) 65% c h);
     --clr-secondary-dark: oklch(from var(--clr-secondary) 45% c h);
@@ -71,7 +71,7 @@
 
     /* Tertiary Color - Analogous Harmony (Dark Orange) */
     --clr-tertiary-hsl: 30 90% 45%;
-    --clr-tertiary: oklch(from var(--themeColor) l c calc(h + 45));
+    --clr-tertiary: oklch(from var(--themeColor) l c calc(h + 110));
     --clr-tertiary-lighter: oklch(from var(--clr-tertiary) 75% c h);
     --clr-tertiary-light: oklch(from var(--clr-tertiary) 65% c h);
     --clr-tertiary-dark: oklch(from var(--clr-tertiary) 45% c h);
@@ -81,7 +81,7 @@
     --clr-neutral-light: hsl(0, 20%, 98%);
     --clr-neutral: hsl(0, 20%, 95%);
     --clr-neutral-dark: hsl(0, 20%, 35%);
-    --clr-neutral-darker: hsl(0, 20%, 25%);
+    --clr-neutral-darker: hsl(0, 20%, 5%);
 
     /* Neutral Shades - Warm Tints */
     --clr-neutral-50: hsl(0, 5%, 100%);
@@ -93,15 +93,22 @@
     --clr-neutral-600: hsl(0, 5%, 50%);
     --clr-neutral-700: hsl(0, 5%, 35%);
     --clr-neutral-800: hsl(0, 5%, 25%);
-    --clr-neutral-900: hsl(0, 5%, 15%);
+    --clr-neutral-900: hsl(0, 5%, 5%);
+}
 
+@media(max-width: 768px) {
+    :root {
+        --content-max-width: 90vw;
 
+    }
 }
 
 @media (min-width: 768px) {
     :root {
         --container-padding-block: var(--size-9);
         --container-padding-inline: var(--size-4);
+        --content-max-width: 1100px;
+
     }
 }
 
@@ -120,7 +127,7 @@ html {
 body {
     --dark: hsl(var(--clr-primary-hsl) / 0.1);
     --light: hsl(var(--clr-primary-hsl) / 0.4);
-    
+
     font-family: 'Atkinson Hyperlegible', sans-serif;
     line-height: 1.5;
     color: var(--clr-neutral-900);
@@ -131,7 +138,7 @@ body {
 .container {
     position: relative;
     isolation: isolate;
-    
+
     scroll-snap-align: start center;
     /* margin-block: var(--container-padding-block); */
     padding-block: var(--container-padding-block);
@@ -162,12 +169,11 @@ h1 {
 
 .content-grid {
     --padding-inline: 1rem;
-    --content-max-width: 1100px;
     --breakout-max-width: 40px;
     --breakout-size: calc((var(--breakout-max-width) - var(--content-max-width)) / 2);
 
     display: grid;
-    grid-template-columns: [full-width-start] minmax(var(--padding-inline),1fr) [breakout-start] minmax(0, var(--breakout-size)) [content-start] min(100% - (var(--padding-inline) * 2), var(--content-max-width)) [content-end] minmax(0, var(--breakout-size)) [breakout-end] minmax(var(--padding-inline), 1fr) [full-width-end];
+    grid-template-columns: [full-width-start] minmax(var(--padding-inline), 1fr) [breakout-start] minmax(0, var(--breakout-size)) [content-start] min(100% - (var(--padding-inline) * 2), var(--content-max-width)) [content-end] minmax(0, var(--breakout-size)) [breakout-end] minmax(var(--padding-inline), 1fr) [full-width-end];
 }
 
 .content-grid> :not(.breakout, .full-width) {
@@ -400,13 +406,55 @@ button:disabled,
 [data-menu-toggle] {
     visibility: visible;
 }
-[data-animate-on-scroll] {
+
+[data-fade-in-on-scroll] {
     transition: all var(--spring);
 }
+
 @media (min-width: 768px) {
     [data-menu-toggle] {
         visibility: hidden;
         display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .col-grid-12 {
+        --col-count: 6;
+        --gutter: 4px;
+        --column-width: calc((var(--content-max-width) - (var(--gutter) * (var(--col-count) - 1))) / var(--col-count));
+        display: grid;
+        grid-template-columns: repeat(var(--col-count), var(--column-width));
+        grid-template-rows: auto;
+        gap: var(--gutter);
+        width: var(--content-max-width);
+        /* height: calc(var(--content-max-width) / 2.5);
+         */
+         height: 100%;
+        padding: 0;
+        margin: var(--container-padding-block) auto;
+    }
+}
+
+@media (min-width: 768px) {
+    .col-grid-12 {
+        --content-max-width: 700px;
+        --col-count: 12;
+        --gutter: 4px;
+        --column-width: calc((var(--content-max-width) - (var(--gutter) * (var(--col-count) - 1))) / var(--col-count));
+        display: grid;
+        grid-template-columns: repeat(var(--col-count), var(--column-width));
+        grid-template-rows: calc(var(--content-max-width) / 2.5);
+        gap: var(--gutter);
+        width: var(--content-max-width);
+        height: calc(var(--content-max-width) / 2.5);
+        padding: 0;
+        margin: var(--container-padding-block) auto;
+    }
+}
+@media (min-width: 768px) {
+    .col-grid-12 {
+        --content-max-width: var(--content-max-width);
     }
 }
 
@@ -418,7 +466,7 @@ button:disabled,
 
 @media (prefers-reduced-motion: no-preference) {
     @supports (animation-timeline: scroll()) {
-        [data-animate-on-scroll] {
+        [data-fade-in-on-scroll] {
             -webkit-animation: fade-in 1.2s var(--snappy-bounce-ease) both;
             animation: fade-in 1.2s var(--snappy-bounce-ease) both;
             animation-timeline: view();
@@ -444,5 +492,109 @@ button:disabled,
 
     100% {
         opacity: 1;
+    }
+}
+
+.alternating-card-grid {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start;
+    gap: var(--size-4);
+}
+
+.alternating-card {
+    display: grid;
+    grid-template-rows: 200px 1fr;
+    gap: var(--size-4);
+
+    padding: var(--size-4);
+
+    width: 100%;
+}
+
+.alternating-card ul {
+    /* list-style: none; */
+    padding: 0;
+    margin: var(--size-2) var(--size-4);
+
+}
+
+/* .alternating-card:nth-child(even) {
+    color: var(--clr-neutral-900);
+}
+.alternating-card:nth-child(odd) {
+    color: var(--clr-neutral-900);
+    background-color: var(--clr-neutral-50);
+    border: 1px solid var(--clr-neutral-200);
+} */
+
+.alternating-card[data-has-background] {
+    background-color: var(--clr-neutral-50);
+}
+
+/* [data-highlight="true"] .alternating-card:nth-child(even) {
+    background-color: var(--clr-secondary);
+}
+
+[data-highlight="true"] .alternating-card:nth-child(odd) {
+    background-color: var(--clr-tertiary);
+}
+[data-highlight="false"] .alternating-card:nth-child(even) {
+    background-color: var(--clr-secondary);
+}
+
+[data-highlight="false"] .alternating-card:nth-child(odd) {
+    background-color: var(--clr-tertiary);
+} */
+
+.alternating-card h3 {
+    margin-bottom: var(--size-2);
+}
+
+
+.alternating-card__image-wrapper {
+    width: 100%;
+    height: 100%;
+
+}
+.alternating-card__image-wrapper[data-has-background] {
+    background-color: hsl(var(--clr-secondary-hsl) / 0.15);
+}
+
+.alternating-card__image {
+    width: 100%;
+    height: 100%;
+}
+
+@media (min-width: 768px) {
+    .alternating-card-grid {
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: flex-start;
+        gap: var(--size-4);
+    }
+
+    .alternating-card {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 400px;
+        gap: var(--size-4);
+        align-items: center;
+
+        padding: var(--size-4);
+
+    }
+
+    .alternating-card>* {
+        grid-row: 1 / -1;
+    }
+
+    .alternating-card:nth-child(even)>.alternating-card__image-wrapper {
+        grid-column: 2 / -1;
+        margin-right: calc(var(--size-8) * -4.5);
+    }
+
+    .alternating-card:nth-child(odd)>.alternating-card__image-wrapper {
+        grid-column: 1 / 2;
     }
 }
