--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-import {spring} from "motion";
 import { getData } from "@src/utils/pocketbase";
 import { SEO } from "astro-seo";
 import { AstroFont } from "astro-font";
@@ -145,6 +144,7 @@ const record = await getData();
 		excerpt={record.hero_excerpt}
 		type={record.hero_style}
 		core_values={record.core_values}
+		grid={record.expand.hero_grid}
 		/>
 		<main>
 			<Sections
@@ -161,14 +161,4 @@ const record = await getData();
 		<Footer company={record.company} title={record.title} style={record.footer_style} />
 	</body>
 </html>
-<style define:vars={{ themeColor: record.theme_color, spring: spring(0.5, 0.8)}} is:global></style>
-<script>
-    // import { animate, scroll, stagger } from "motion";
-    // const animateOnScrollItems = document.querySelectorAll("[data-animate-on-scroll]");
-    // animateOnScrollItems.forEach((item) => {
-    //     scroll(animate(item, { opacity: [0, 1, 1, 0] }, {ease: "linear", duration: 0.75, delay: stagger(0.5)}), {
-    //         target: item,
-    //         offset: ["start end", "end end", "start start", "end start"],
-    //     })
-    // })
-</script>
+<style define:vars={{ themeColor: record.theme_color}} is:global></style>
