Update dependencies, enhance styling for alternating cards, and improve SEO meta tags

--- a/src/components/Sections/CtaSection/CtaSection.astro
+++ b/src/components/Sections/CtaSection/CtaSection.astro
@@ -34,7 +34,7 @@ const { data } = Astro.props;
                     {data.expand.section_grid && (
                         <Cards card_type={data.grid_type} cards={data.expand.section_grid} data={data} />
                     )}
-                    <a href="#contact-us" class="cta__link btn btn-md btn-secondary">Get in Touch</a>
+                    <a href="#contact-us" class="cta__link btn btn-md btn-primary">Get in Touch</a>
                 </div>
             </div>
 
