--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -529,6 +529,7 @@ button:disabled,
 } */
 
 .alternating-card[data-has-background] {
+    color: var(--clr-neutral-900);
     background-color: var(--clr-neutral-50);
 }
 
