--- a/src/components/Cards/Alternating/alternating.css
+++ b/src/components/Cards/Alternating/alternating.css
@@ -22,7 +22,14 @@
 
 }
 
-.alternating-card:nth-child(even) {
+.alternating-card[data-has-background]{
+    color: var(--clr-neutral-900);
+    background-color: var(--clr-neutral-50);
+    /* border: 1px solid var(--clr-neutral-200); */
+
+}
+
+/* .alternating-card:nth-child(even) {
     color: var(--clr-neutral-900);
     background-color: var(--clr-neutral-200);
 }
@@ -30,7 +37,7 @@
     color: var(--clr-neutral-900);
     background-color: var(--clr-neutral-50);
     border: 1px solid var(--clr-neutral-200);
-}
+} */
 
 /* [data-highlight="true"] .alternating-card:nth-child(even) {
     background-color: var(--clr-secondary);
