--- a/src/components/Sections/CtaSection/cta.css
+++ b/src/components/Sections/CtaSection/cta.css
@@ -8,8 +8,8 @@
     
     padding: var(--size-8) var(--size-8);
     border-radius: var(--size-4);
-    border: 2px solid hsl(var(--clr-secondary-hsl) / 0.15);
-    background-color: hsl(var(--clr-secondary-hsl) / 0.05);
+    border: 2px solid hsl(var(--clr-primary-hsl) / 0.15);
+    background-color: hsl(var(--clr-primary-hsl) / 0.02);
 }
 
 .cta__content {
